Fix several CSS issues
Fix options card layout
Fix my addons table layout breaking.
Remove slide toggle icons.
Fix show in browser icon.
Fix update all dropdown icon.

--- a/wowup-electron/src/custom-theme.scss
+++ b/wowup-electron/src/custom-theme.scss
@@ -1,7 +1,6 @@
 @use "@angular/material" as mat;
 @import "./variables.scss";
 
-
 @import "ag-grid-community/styles/ag-grid.css";
 @import "ag-grid-community/styles/ag-theme-material.css";
 
@@ -245,10 +244,23 @@ body {
   --mdc-filled-text-field-container-color: var(--background-secondary-2);
   --mdc-filled-text-field-focus-label-text-color: #fff;
   --mdc-filled-text-field-caret-color: #fff;
+  --mat-tab-header-active-label-text-color: var(--text-1);
 }
 
 .mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
   color: var(--text-3) !important;
+}
+
+.mat-mdc-tab.mdc-tab--active .mdc-tab__text-label {
+  color: var(--text-1) !important;
+}
+
+.mat-mdc-card {
+  background-color: var(--background-secondary-3) !important;
+}
+
+.mat-mdc-slide-toggle-checked .mdc-switch .mdc-switch__handle::before {
+  background-color: transparent !important;
 }
 
 .default-theme {
@@ -279,7 +291,6 @@ body {
   --title-logo: url("assets/images/wowup-white-1.png");
   --theme-logo: url("assets/images/wowup-white-1.png");
   --ad-placeholder: url("assets/images/wowup-placeholder.png");
-
 }
 
 .default-theme-light-theme {
@@ -674,8 +685,8 @@ div[class*="light-theme"] {
   }
 }
 
-.mat-icon-button {
-  &.mat-accent {
+.mat-mdc-icon-button {
+  &:not([disabled]).mat-accent {
     svg {
       fill: var(--text-1);
     }
